--- a/index.html
+++ b/index.html
@@ -16,11 +16,27 @@
 
     <link rel="manifest" href="manifest.json">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
+
     <title>Gilvan Araújo</title>
 </head>
 
 <body>
+    <header>
 
+    </header>
+    <section class="container">
+        <div class="sidebar">
+
+        </div>
+        <div class="main">
+
+        </div>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
