Make header and change logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
 <body>
     <header>
-
+        <a href="#">
+            <img src="./images/logo.svg" alt="Logo" class="logo">
+        </a>
     </header>
     <section class="container">
         <div class="sidebar">
