--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     </header>
     <section class="container">
         <div class="sidebar">
-
+            <h2>About me</h2>
+            <img src="./images/profile.jpg" alt="Personal Photo" class="personal-photo">
+            <figcaption>
+                Brazilian, student and undergraduate in Computer Science by Universidade Estadual da Paraíba.
+            </figcaption>
         </div>
         <div class="main">
 
