--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
     <header>
         <a href="#">
+            <h1 style="display: none;">Gilvan Araújo</h1>
             <img src="./images/logo.svg" alt="Logo" class="logo">
         </a>
     </header>
@@ -37,7 +38,28 @@
             </figcaption>
         </div>
         <div class="main">
+            <h2>Web Applications</h2>
+            <div class="outer-container">
+                <div class="app-container">
+                    <a href="#">
+                        <img src="favicon.svg" alt="App Logo" class="app-logo">
+                        <h3>Mock <br> application</h3>
+                    </a>
+                </div>
+                <div class="app-container">
+                    <a href="#">
+                        <img src="favicon.svg" alt="App Logo" class="app-logo">
+                        <h3>Mock <br> application</h3>
+                    </a>
+                </div>
+                <div class="app-container">
+                    <a href="#">
+                        <img src="favicon.svg" alt="App Logo" class="app-logo">
+                        <h3>Mock <br> application</h3>
+                    </a>
+                </div>
 
+            </div>
         </div>
     </section>
     <footer>
