--- a/index.html
+++ b/index.html
@@ -39,31 +39,30 @@
         </div>
         <div class="main">
             <h2>Web Applications</h2>
-            <div class="outer-container">
+            <!-- <div class="outer-container">
                 <div class="app-container">
                     <a href="#">
                         <img src="favicon.svg" alt="App Logo" class="app-logo">
                         <h3>Mock <br> application</h3>
                     </a>
-                </div>
-                <div class="app-container">
-                    <a href="#">
-                        <img src="favicon.svg" alt="App Logo" class="app-logo">
-                        <h3>Mock <br> application</h3>
-                    </a>
-                </div>
-                <div class="app-container">
-                    <a href="#">
-                        <img src="favicon.svg" alt="App Logo" class="app-logo">
-                        <h3>Mock <br> application</h3>
-                    </a>
-                </div>
-
-            </div>
+                </div> 
+            </div>-->
+        </div>
         </div>
     </section>
     <footer>
-
+        <h4>Gilvan Araújo</h4>
+        <div class="social-container">
+            <a href="https://github.com/Gilvan-Araujo">
+                <img src="./images/github.svg" alt="Github link" class="social-img">
+            </a>
+            <a href="https://www.linkedin.com/in/gilvan-araujo-jr/">
+                <img src="./images/linkedin.svg" alt="Github link" class="social-img">
+            </a>
+            <a href="mailto:gilvanjunior@protonmail.com">
+                <img src="./images/email.svg" alt="Github link" class="social-img">
+            </a>
+        </div>
     </footer>
 </body>
 
