--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         </div>
         <div class="main">
             <h2>Web Applications</h2>
-            <!-- <div class="outer-container">
+            <div class="outer-container">
                 <div class="app-container">
                     <a href="#">
                         <img src="favicon.svg" alt="App Logo" class="app-logo">
                         <h3>Mock <br> application</h3>
                     </a>
                 </div> 
-            </div>-->
+            </div>
         </div>
         </div>
     </section>
