Update links' targets

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <img src="favicon.svg" alt="App Logo" class="app-logo">
                         <h3>Mock <br> application</h3>
                     </a>
-                </div> 
+                </div>
             </div>
         </div>
         </div>
@@ -53,13 +53,13 @@
     <footer>
         <h4>Gilvan Araújo</h4>
         <div class="social-container">
-            <a href="https://github.com/Gilvan-Araujo">
+            <a href="https://github.com/Gilvan-Araujo" target="_blank">
                 <img src="./images/github.svg" alt="Github link" class="social-img">
             </a>
-            <a href="https://www.linkedin.com/in/gilvan-araujo-jr/">
+            <a href="https://www.linkedin.com/in/gilvan-araujo-jr/" target="_blank">
                 <img src="./images/linkedin.svg" alt="Github link" class="social-img">
             </a>
-            <a href="mailto:gilvanjunior@protonmail.com">
+            <a href="mailto:gilvanjunior@protonmail.com" target="_blank">
                 <img src="./images/email.svg" alt="Github link" class="social-img">
             </a>
         </div>
