Code light theme

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <a href="#">
             <h1 style="display: none;">Gilvan Araújo</h1>
-            <img src="./images/logo.svg" alt="Logo" class="logo">
+            <img src="./images/logo.svg" alt="Logo" class="logo svg">
         </a>
     </header>
     <section class="container">
@@ -51,19 +51,25 @@
         </div>
     </section>
     <footer>
-        <h4>Gilvan Araújo</h4>
+        <div>
+            <h4>Gilvan Araújo</h4>
+        </div>
         <div class="social-container">
             <a href="https://github.com/Gilvan-Araujo" target="_blank">
-                <img src="./images/github.svg" alt="Github link" class="social-img">
+                <img src="./images/github.svg" alt="Github link" class="social-img svg">
             </a>
             <a href="https://www.linkedin.com/in/gilvan-araujo-jr/" target="_blank">
-                <img src="./images/linkedin.svg" alt="Github link" class="social-img">
+                <img src="./images/linkedin.svg" alt="Github link" class="social-img svg">
             </a>
             <a href="mailto:gilvanjunior@protonmail.com" target="_blank">
-                <img src="./images/email.svg" alt="Github link" class="social-img">
+                <img src="./images/email.svg" alt="Github link" class="social-img svg">
             </a>
         </div>
+        <div>
+            <button class="light-mode-button" onclick="toggleVisualMode()">☀️</button>
+        </div>
     </footer>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
