--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <h2>Web Applications</h2>
             <div class="outer-container">
                 <div class="app-container">
-                    <a href="./apps/template/index.html">
-                        <img src="./apps/template/favicon.svg" alt="App Template" class="app-logo">
-                        <h3>Mock <br> application</h3>
+                    <a href="./apps/binary-converter/index.html">
+                        <img src="./apps/binary-converter/favicon.svg" alt="Binary Converter" class="app-logo">
+                        <h3>Binary to <br> Decimal</h3>
                     </a>
                 </div>
             </div>
