--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/style.css">
 
     <link rel="icon" href="favicon.svg">
