Update binary converter

--- a/apps/binary-converter/index.html
+++ b/apps/binary-converter/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="../../styles/normalize.css">
+    <link rel="stylesheet" href="../../styles/global.css">
     <link rel="stylesheet" href="./styles/style.css">
 
     <link rel="icon" href="favicon.svg">
@@ -24,10 +25,10 @@
 
 <body>
     <header>
-        <a href="../../index.html" class="back-button svg"><img src="./images/back.svg" alt="Home"></a>
+        <a href="../../index.html" class="back-button svg"><img src="../../images/back.svg" alt="Home"></a>
         <a href="../../index.html">
             <h1 style="display: none;">Gilvan Araújo</h1>
-            <img src="./images/logo.svg" alt="Logo" class="logo svg">
+            <img src="../../images/logo.svg" alt="Logo" class="logo svg">
         </a>
     </header>
     <section>
@@ -58,13 +59,13 @@
         </div>
         <div class=" social-container">
             <a href="https://github.com/Gilvan-Araujo" target="_blank">
-                <img src="./images/github.svg" alt="Github link" class="social-img svg">
+                <img src="../../images/github.svg" alt="Github Page" class="social-img svg">
             </a>
             <a href="https://www.linkedin.com/in/gilvan-araujo-jr/" target="_blank">
-                <img src="./images/linkedin.svg" alt="Github link" class="social-img svg">
+                <img src="../../images/linkedin.svg" alt="Linkedin Page" class="social-img svg">
             </a>
             <a href="mailto:gilvanjunior@protonmail.com" target="_blank">
-                <img src="./images/email.svg" alt="Github link" class="social-img svg">
+                <img src="../../images/email.svg" alt="Send Email" class="social-img svg">
             </a>
         </div>
         <div>
