--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </a>
         </div>
         <div>
-            <button class="light-mode-button" onclick="toggleVisualMode()">☀️</button>
+            <button class="visual-mode-button" onclick="toggleVisualMode()">☀️</button>
         </div>
     </footer>
     <script src="./scripts/script.js"></script>
