--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <button class="visual-mode-button" onclick="toggleVisualMode()">☀️</button>
         </div>
     </footer>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/global.js"></script>
 </body>
 
 </html>
