--- a/apps/binary-converter/index.html
+++ b/apps/binary-converter/index.html
@@ -72,6 +72,7 @@
             <button class="visual-mode-button" onclick="toggleVisualMode()">☀️</button>
         </div>
     </footer>
+    <script src="../../scripts/global.js"></script>
     <script src="./scripts/script.js"></script>
 </body>
 
