Add cyberpong game to homepage

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                         <h3>Binary to <br> Decimal</h3>
                     </a>
                 </div>
+                <div class="app-container">
+                    <a href="https://bladertom.itch.io/cyberpong" target="_blank">
+                        <img src="./images/cyberpong_logo.png" alt="CyberPong Game" class="app-logo">
+                        <h3>CyberPong <br> Game</h3>
+                    </a>
+                </div>
             </div>
         </div>
         </div>
