--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
                         <h3>CyberPong <br> Game</h3>
                     </a>
                 </div>
+                <div class="app-container">
+                    <a href="./apps/dollars-converter/index.html">
+                        <img src="./apps/dollars-converter/favicon.svg" alt="Dollars Converter" class="app-logo">
+                        <h3>Dollars to <br> Cents</h3>
+                    </a>
+                </div>
             </div>
         </div>
         </div>
