Update main page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                         <h3>Dollars to <br> Cents</h3>
                     </a>
                 </div>
+                <div class="app-container">
+                    <a href="./apps/native-hello/index.html">
+                        <img src="./apps/native-hello/favicon.svg" alt="Native Hello" class="app-logo">
+                        <h3>Native <br> Hello</h3>
+                    </a>
+                </div>
             </div>
         </div>
         </div>
