Update main page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <h2>Web Applications</h2>
             <div class="outer-container">
                 <div class="app-container">
+                    <a href="./apps/barbecuemeter/">
+                        <img src="./apps/barbecuemeter/favicon.svg" alt="Barbecue Meter" class="app-logo">
+                        <h3>Barbecue <br> Meter</h3>
+                    </a>
+                </div>
+                <div class="app-container">
                     <a href="./apps/binary-converter/index.html">
                         <img src="./apps/binary-converter/favicon.svg" alt="Binary Converter" class="app-logo">
                         <h3>Binary to <br> Decimal</h3>
