Update anchor links

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </a>
                 </div>
                 <div class="app-container">
-                    <a href="./apps/binary-converter/index.html">
+                    <a href="./apps/binary-converter/">
                         <img src="./apps/binary-converter/favicon.svg" alt="Binary Converter" class="app-logo">
                         <h3>Binary to <br> Decimal</h3>
                     </a>
@@ -60,13 +60,13 @@
                     </a>
                 </div>
                 <div class="app-container">
-                    <a href="./apps/dollars-converter/index.html">
+                    <a href="./apps/dollars-converter/">
                         <img src="./apps/dollars-converter/favicon.svg" alt="Dollars Converter" class="app-logo">
                         <h3>Dollars to <br> Cents</h3>
                     </a>
                 </div>
                 <div class="app-container">
-                    <a href="./apps/native-hello/index.html">
+                    <a href="./apps/native-hello/">
                         <img src="./apps/native-hello/favicon.svg" alt="Native Hello" class="app-logo">
                         <h3>Native <br> Hello</h3>
                     </a>
