--- a/apps/tic-tac-toe/index.html
+++ b/apps/tic-tac-toe/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
 
-    <title>Gilvan Araújo</title>
+    <title>Medieval Tic-Tac-Toe</title>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
             </p>
         </div>
         <div class="main">
-            <h2>Tic Tac Toe</h2>
+            <h2>Medieval Tic-Tac-Toe</h2>
             <div class="stage">
                 <div>
                     <div id="0" class="square"></div>
