Add application to home page

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
                         <h3>Native <br> Hello</h3>
                     </a>
                 </div>
+                <div class="app-container">
+                    <a href="./apps/tic-tac-toe/">
+                        <img src="./apps/tic-tac-toe/favicon.svg" alt="Medieval Tic Tac Toe" class="app-logo">
+                        <h3>Medieval <br> Tic-Tac-Toe</h3>
+                    </a>
+                </div>
             </div>
         </div>
         </div>
