Add memory game to homepage

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
                         <h3>Medieval <br> Tic-Tac-Toe</h3>
                     </a>
                 </div>
+                <div class="app-container">
+                    <a href="./apps/memory-game/">
+                        <img src="./apps/memory-game/favicon.svg" alt="Memory Game" class="app-logo">
+                        <h3>Memory <br> Game</h3>
+                    </a>
+                </div>
             </div>
         </div>
         </div>
