Add application to home page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
                         <h3>Memory <br> Game</h3>
                     </a>
                 </div>
+                <div class="app-container">
+                    <a href="./apps/random-number-generator/">
+                        <img src="./apps/random-number-generator/favicon.svg" alt="Random Number Generator" class="app-logo">
+                        <h3>Number <br> Generator</h3>
+                    </a>
+                </div>
             </div>
         </div>
         </div>
