Add Image Flipper to home page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
                     </a>
                 </div>
                 <div class="app-container">
+                    <a href="./apps/image-flipper/">
+                        <img src="./apps/image-flipper/favicon.svg" alt="Image Flipper" class="app-logo">
+                        <h3>Image <br> Flipper</h3>
+                    </a>
+                </div>
+                <div class="app-container">
                     <a href="./apps/native-hello/">
                         <img src="./apps/native-hello/favicon.svg" alt="Native Hello" class="app-logo">
                         <h3>Native <br> Hello</h3>
@@ -85,7 +91,8 @@
                 </div>
                 <div class="app-container">
                     <a href="./apps/random-number-generator/">
-                        <img src="./apps/random-number-generator/favicon.svg" alt="Random Number Generator" class="app-logo">
+                        <img src="./apps/random-number-generator/favicon.svg" alt="Random Number Generator"
+                            class="app-logo">
                         <h3>Number <br> Generator</h3>
                     </a>
                 </div>
